--- a/resume.css
+++ b/resume.css
@@ -14,6 +14,7 @@ body {
     padding-top: 40px;
     background-color: rgb(255, 255, 255);
     font-family: "Poppins";
+    cursor: none;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -31,7 +32,7 @@ body {
 }
 
 .name {
-    color: #963821;
+    color: #cc4726;
     font-size: 3.5em;
     line-height: 1em;
     padding-top: 5px;
@@ -40,7 +41,7 @@ body {
 
 .header-1, .header-2, .header-3, .header-4 {
     font-size: 3em;
-    color: #963821;
+    color: #cc4726;
 }
 
 .header-2 { 
@@ -237,6 +238,32 @@ hr.solid {
     text-align: left;
 }
 
+/*costumize cursor for the website.*/
+.cursor-dot {
+    width: 10px;
+    height: 10px;
+    background-color: rgb(0, 0, 0);
+}
+
+.cursor-outline {
+    width: 60px;
+    height: 60px;
+    border: 2px solid hsla(0, 0%, 0%, 0.684);
+}
+
+.cursor-dot,
+.cursor-outline {
+    position: fixed;
+    top: 0;
+    left: 0;
+    transform: translate(-50%, -50%);
+    border-radius: 50%;
+    z-index: 1;
+    pointer-events: none; 
+}
+
+
+/*for cp view.*/
 @media (max-width: 480px) {
 
     body {
